# DataStructure

./: .gitignore  README.md
C/: CMakeLists.txt  Data_Structure_In_C.md  use_linked_list.c
C/LinkedList/: list.c  list.h
